import { ITarif } from "../interfaces/entities/Tarif/ITarif";
import { ISessionRecharge } from "../interfaces/entities/SessionRecharge/ISessionRecharge";
import { ISessionRechargeData } from "../interfaces/entities/SessionRecharge/ISessionRechargeData";

export class SessionRechargeService implements ISessionRecharge
{
  private readonly sessionRechargeData: ISessionRechargeData;

  public constructor(
    sessionRechargeData: ISessionRechargeData,
  ){
    // Set the data for session recharge
    this.sessionRechargeData = { ...sessionRechargeData };

    // Add Id if not existing (to Fill but not nescary at all)
    if ( !this.sessionRechargeData.id )  
      this.sessionRechargeData.id = this.getId()
  }

/**
 * Count tarif for a session recharge.
 *
 * @public
 * @returns {number} 
 */
  public count(): number {
    if ( this.sessionRechargeData.tarif === undefined ) {
      console.log(`[SESSION RECHARGE] Aucun tarif défini pour la session de recharge ${this.sessionRechargeData.id}, le coût est de 0.`);
      throw new Error(`Aucun tarif défini pour la session de recharge ${this.sessionRechargeData.id}`);
    }
    return this.sessionRechargeData.tarif.calculerCout(this.sessionRechargeData);
  } 

  private getId(): string {
    // Return a fake number
    return `SessionRecharge_${Math.floor(Math.random() * 1000)}`;
  }
}
